# idf2yaml

./: MANIFEST.in  README.md  example.py  optional-requirements.txt  pyproject.toml  python-package.yml  requirements.txt  setup.cfg  setup.py
.github/workflows/: release.yml  test.yml
idf2yaml/: __init__.py  __main__.py  core.py
idf2yaml/iddfiles/: README
tests/: full_test_round_trip.py  test_cli.py  test_file_rt.py  test_round_trip.py  test_round_trip_fast.py  test_wrong_attribute.py
tests/eplusfiles/: 1ZoneDataCenterCRAC_wApproachTemp.idf  1ZoneUncontrolled_Win_ASH55_Thermal_Comfort.idf  5ZoneAirCooledConvCoef_VSFan.idf  5ZoneAirCooledWithSpacesHVAC.idf  5ZoneVAV-ChilledWaterStorage-Mixed.idf  5ZoneVAV-ChilledWaterStorage-Mixed_DCV_MaxZd.idf  5ZoneVAV-ChilledWaterStorage-Mixed_DCV_MultiPath.idf  5ZoneVAV-ChilledWaterStorage-Stratified.idf  ASHRAE901_RetailStripmall_STD2019_Denver.idf  DOAToPTHP.idf  DOAToUnitarySystem.idf  DirectIndirectEvapCoolers.idf  DirectIndirectEvapCoolersVSAS.idf  EMSCustomOutputVariable.idf  EMSCustomSchedule.idf  EMSDemandManager_LargeOffice.idf  EMSDiscreteAirSystemSizes.idf  EMSReplaceTraditionalManagers_LargeOffice.idf  EMSTestMathAndKill.idf  EvaporativeFluidCooler.idf  EvaporativeFluidCooler_TwoSpeed.idf  FanCoil_HybridVent_VentSch.idf  FluidCooler.idf  FluidCoolerTwoSpeed.idf  HVACTemplate-5ZonePTAC-DOAS-TwoHX.idf  HybridModel_4Zone_Solve_Infiltration_free_floating.idf  PerformancePrecision_ASHRAE9012016_SchoolSecondary_Denver.idf  PythonPluginCustomOutputVariable.idf  PythonPluginCustomSchedule.idf  PythonPluginCustomTrendVariable.idf  PythonPluginDemandManager_LargeOffice.idf  PythonPluginDiscreteAirSystemSizes.idf  PythonPluginReplaceTraditionalManagers_LargeOffice.idf  PythonPluginTestMathAndKill.idf  (+7 more)
