[metadata]
name = idf2yaml
version = 0.1.1
description = A package for conversion of EnergyPlus IDF files to YAML format (with useful annotation), and back.
long_description = file: README.md
long_description_content_type = text/markdown
author = Federico Rosato
author_email = federico.rosato@supsi.ch
license = MIT
license_files = LICENSE
url = https://github.com/supsi-dacd-isaac/idf2yaml
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
packages = find:
python_requires = >=3.7
install_requires =
    eppy>=0.5.60,<1.0.0
    ruamel.yaml>=0.17.0,<0.18.0

[options.extras_require]
test =
    numpy>=1.21.0,<2.0.0
    pytest>=7.0.0,<8.0.0
    pytest-cov>=3.0.0,<4.0.0
dev =
    black>=22.0.0,<23.0.0
    flake8>=4.0.0,<5.0.0
    isort>=5.0.0,<6.0.0
    pre-commit>=2.0.0,<3.0.0

[options.package_data]
* = *.py

[options.packages.find]
exclude =
    tests

[tool:pytest]
addopts = -ra -q
testpaths = tests
